syntax = "proto3";

package book_service;
option go_package = "book_service/interface/grpc/genproto/book";

service AuthService {
    rpc GetBookTotalByAuthorUUID(GetBookTotalByAuthorUUIDReq) returns (GetBookTotalByAuthorUUIDResp);
    rpc BulkGetBookTotalByAuthorUUIDs(BulkGetBookTotalByAuthorUUIDsReq) returns (BulkGetBookTotalByAuthorUUIDsResp);
}

message GetBookTotalByAuthorUUIDReq {
    string author_uuid = 1;
}

message GetBookTotalByAuthorUUIDResp {
    int64 book_total = 1;
}

message BulkGetBookTotalByAuthorUUIDsReq {
    repeated string author_uuids = 1;
}

message BulkGetBookTotalByAuthorUUIDsResp_Data {
    string author_uuid = 1;
    int64 book_total = 2;
}

message BulkGetBookTotalByAuthorUUIDsResp {
    repeated BulkGetBookTotalByAuthorUUIDsResp_Data data = 1;
}